# skystats

./: .dockerignore  .env  .env.example  .gitignore  .goreleaser.yaml  Dockerfile  README.md  docker-compose.yml  example.compose.yml  go.mod  go.sum
.github/workflows/: build.yml  release.yml
api/: main.go
core/: .env-example  aircraft.go  api-registrations.go  api-routes.go  api.go  core.go  countries.go  db-connector.go  db-migrations.go  db-plane-alert-data.go  db-utils.go  models.go  readsb.go  registrations.go  routes.go  stats-interesting.go  stats-motion-helpers.go  stats-motion.go  stats-routes.go  version.go
data/: airlines_embed.go
docs/logo/: skystats_ascii.txt
migrations/: 000001_initial_schema.down.sql  000001_initial_schema.up.sql  000002_add_commit_hash.down.sql  000002_add_commit_hash.up.sql
rootfs/etc/nginx/: nginx.conf
scripts/: build  plane-alert-db.py  pyproject.toml  requirements.txt  schema.sql
web/: app.css  index.html  package-lock.json  package.json  script.js  style.css  vite.config.js
web-old/: script.js
web/src/: App.svelte  main.js
web/src/components/: Above.svelte  AboveTimeline.svelte  ActivityAircraftByPeriod.svelte  ActivityFlightsByPeriod.svelte  ActivityTopTypesByPeriod.svelte  AircraftStats.svelte  FastestAircraft.svelte  Footer.svelte  GeneralStats.svelte  HighestAircraft.svelte  InterestingAircraft.svelte  InterestingCivAircraft.svelte  InterestingGovAircraft.svelte  InterestingMilAircraft.svelte  InterestingPolAircraft.svelte  LowestAircraft.svelte  MetricAircraftSeen.svelte  MetricFlightsSeen.svelte  (+27 more)
(+8 files in other folders)
